# Phylospect

./: README.md  README.md.txt  permutation_null.py  phylospect_core.py  run_phylospect_pipeline.py  spectral_basis.py
data/: results_phylospect.csv
phylospect/: LICENSE  README.md  pyproject.toml  requirements.txt
phylospect/data/empirical/: cd2.fasta  cd2_clades.txt  lysozyme.fasta  lysozyme.tre  lysozyme_clades.txt
phylospect/data/simulated/: 01_calibration_seed42.fasta  01_calibration_seed42_tree.nwk  02_power_omega3_n1000_seed0.fasta
phylospect/experiments/: 01_calibration.py  02_power.py  03_alignment_length.py  04_paml_comparison.py  05_runtime.py  06_branch_length.py  07_basis_sensitivity.py  08_misspecification.py  09_empirical_v4.py
phylospect/phylospect/: gy94.py  parsimony.py  permutation.py  pipeline.py  simulate.py  spectral.py  statistics.py  stochastic_mapping.py
phylospect/results/: 01_calibration.csv  02_power.csv  03_alignment_length.csv  04_paml_comparison.csv  05_runtime.csv  06_branch_length.csv  07_basis_sensitivity.csv  08_misspecification.csv  09_empirical_cd2_internal.csv  09_empirical_lysozyme.csv  09_empirical_lysozyme_internal.csv
phylospect/scripts/: generate_archived_simulations.py
phylospect/tests/: test_spectral_stats.py
phylospect/vignette/: example_alignment.fasta  quickstart.md
